// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`JsiiProject with default settings synthesizes 1`] = `
{
  ".eslintrc.json": {
    "env": {
      "jest": true,
      "node": true,
    },
    "extends": [
      "plugin:import/typescript",
    ],
    "ignorePatterns": [
      "*.js",
      "*.d.ts",
      "node_modules/",
      "*.generated.ts",
      "coverage",
      "!.projenrc.js",
    ],
    "overrides": [
      {
        "files": [
          ".projenrc.js",
        ],
        "rules": {
          "@typescript-eslint/no-require-imports": "off",
          "import/no-extraneous-dependencies": "off",
        },
      },
    ],
    "parser": "@typescript-eslint/parser",
    "parserOptions": {
      "ecmaVersion": 2018,
      "project": "./tsconfig.dev.json",
      "sourceType": "module",
    },
    "plugins": [
      "@typescript-eslint",
      "import",
      "@stylistic",
    ],
    "root": true,
    "rules": {
      "@stylistic/array-bracket-newline": [
        "error",
        "consistent",
      ],
      "@stylistic/array-bracket-spacing": [
        "error",
        "never",
      ],
      "@stylistic/brace-style": [
        "error",
        "1tbs",
        {
          "allowSingleLine": true,
        },
      ],
      "@stylistic/comma-dangle": [
        "error",
        "always-multiline",
      ],
      "@stylistic/comma-spacing": [
        "error",
        {
          "after": true,
          "before": false,
        },
      ],
      "@stylistic/indent": [
        "error",
        2,
      ],
      "@stylistic/key-spacing": [
        "error",
      ],
      "@stylistic/keyword-spacing": [
        "error",
      ],
      "@stylistic/max-len": [
        "error",
        {
          "code": 150,
          "ignoreComments": true,
          "ignoreRegExpLiterals": true,
          "ignoreStrings": true,
          "ignoreTemplateLiterals": true,
          "ignoreUrls": true,
        },
      ],
      "@stylistic/member-delimiter-style": [
        "error",
      ],
      "@stylistic/no-multi-spaces": [
        "error",
        {
          "ignoreEOLComments": false,
        },
      ],
      "@stylistic/no-multiple-empty-lines": [
        "error",
      ],
      "@stylistic/no-trailing-spaces": [
        "error",
      ],
      "@stylistic/object-curly-newline": [
        "error",
        {
          "consistent": true,
          "multiline": true,
        },
      ],
      "@stylistic/object-curly-spacing": [
        "error",
        "always",
      ],
      "@stylistic/object-property-newline": [
        "error",
        {
          "allowAllPropertiesOnSameLine": true,
        },
      ],
      "@stylistic/quote-props": [
        "error",
        "consistent-as-needed",
      ],
      "@stylistic/quotes": [
        "error",
        "single",
        {
          "avoidEscape": true,
        },
      ],
      "@stylistic/semi": [
        "error",
        "always",
      ],
      "@stylistic/space-before-blocks": [
        "error",
      ],
      "@typescript-eslint/member-ordering": [
        "error",
        {
          "default": [
            "public-static-field",
            "public-static-method",
            "protected-static-field",
            "protected-static-method",
            "private-static-field",
            "private-static-method",
            "field",
            "constructor",
            "method",
          ],
        },
      ],
      "@typescript-eslint/no-floating-promises": "error",
      "@typescript-eslint/no-require-imports": "error",
      "@typescript-eslint/no-shadow": "error",
      "@typescript-eslint/return-await": "error",
      "curly": [
        "error",
        "multi-line",
        "consistent",
      ],
      "dot-notation": [
        "error",
      ],
      "import/no-duplicates": [
        "error",
      ],
      "import/no-extraneous-dependencies": [
        "error",
        {
          "devDependencies": [
            "**/test/**",
            "**/build-tools/**",
          ],
          "optionalDependencies": false,
          "peerDependencies": true,
        },
      ],
      "import/no-unresolved": [
        "error",
      ],
      "import/order": [
        "warn",
        {
          "alphabetize": {
            "caseInsensitive": true,
            "order": "asc",
          },
          "groups": [
            "builtin",
            "external",
          ],
        },
      ],
      "no-bitwise": [
        "error",
      ],
      "no-return-await": [
        "off",
      ],
      "no-shadow": [
        "off",
      ],
    },
    "settings": {
      "import/parsers": {
        "@typescript-eslint/parser": [
          ".ts",
          ".tsx",
        ],
      },
      "import/resolver": {
        "node": {},
        "typescript": {
          "alwaysTryTypes": true,
          "project": "./tsconfig.dev.json",
        },
      },
    },
  },
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf
*.snap linguist-generated
/.eslintrc.json linguist-generated linguist-language=JSON-with-Comments
/.gitattributes linguist-generated
/.github/pull_request_template.md linguist-generated
/.github/workflows/build.yml linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.github/workflows/release.yml linguist-generated
/.github/workflows/upgrade-main.yml linguist-generated
/.gitignore linguist-generated
/.mergify.yml linguist-generated
/.npmignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/API.md linguist-generated
/LICENSE linguist-generated
/package.json linguist-generated
/tsconfig.dev.json linguist-generated linguist-language=JSON-with-Comments
/yarn.lock linguist-generated",
  ".github/pull_request_template.md": "Fixes #",
  ".github/workflows/build.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: build
on:
  pull_request: {}
  workflow_dispatch: {}
jobs:
  build:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      self_mutation_happened: \${{ steps.self_mutation.outputs.self_mutation_happened }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Install dependencies
        run: yarn install --check-files
      - name: build
        run: npx projen build
      - name: Find mutations
        id: self_mutation
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "self_mutation_happened=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.self_mutation.outputs.self_mutation_happened
        uses: actions/upload-artifact@v4.6.2
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
      - name: Fail build on mutation
        if: steps.self_mutation.outputs.self_mutation_happened
        run: |-
          echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
          cat repo.patch
          exit 1
      - name: Backup artifact permissions
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        uses: actions/upload-artifact@v4.6.2
        with:
          name: build-artifact
          path: dist
          overwrite: true
  self-mutation:
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: always() && needs.build.outputs.self_mutation_happened && !(github.event.pull_request.head.repo.full_name != github.repository)
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Download patch
        uses: actions/download-artifact@v5
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Push changes
        env:
          PULL_REQUEST_REF: \${{ github.event.pull_request.head.ref }}
        run: |-
          git add .
          git commit -s -m "chore: self mutation"
          git push origin "HEAD:$PULL_REQUEST_REF"
  package-js:
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: \${{ !needs.build.outputs.self_mutation_happened }}
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Checkout
        uses: actions/checkout@v5
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
          path: .repo
      - name: Install Dependencies
        run: cd .repo && yarn install --check-files --frozen-lockfile
      - name: Extract build artifact
        run: tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo
      - name: Move build artifact out of the way
        run: mv dist dist.old
      - name: Create js artifact
        run: cd .repo && npx projen package:js
      - name: Collect js artifact
        run: mv .repo/dist dist
",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
  merge_group: {}
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')
    steps:
      - uses: amannn/action-semantic-pull-request@v6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
",
  ".github/workflows/release.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
concurrency:
  group: \${{ github.workflow }}
  cancel-in-progress: false
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
        shell: bash
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.6.2
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs:
      - release
      - release_npm
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_SHA 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  release_npm:
    name: Publish to npm
    needs: release
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Checkout
        uses: actions/checkout@v5
        with:
          path: .repo
      - name: Install Dependencies
        run: cd .repo && yarn install --check-files --frozen-lockfile
      - name: Extract build artifact
        run: tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo
      - name: Move build artifact out of the way
        run: mv dist dist.old
      - name: Create js artifact
        run: cd .repo && npx projen package:js
      - name: Collect js artifact
        run: mv .repo/dist dist
      - name: Release
        env:
          NPM_DIST_TAG: latest
          NPM_REGISTRY: registry.npmjs.org
          NPM_CONFIG_PROVENANCE: "true"
          NPM_TOKEN: \${{ secrets.NPM_TOKEN }}
        run: npx -p publib@latest publib-npm
",
  ".github/workflows/upgrade-main.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: upgrade-main
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    outputs:
      patch_created: \${{ steps.create_patch.outputs.patch_created }}
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          ref: main
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Find mutations
        id: create_patch
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "patch_created=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.create_patch.outputs.patch_created
        uses: actions/upload-artifact@v4.6.2
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: \${{ needs.upgrade.outputs.patch_created }}
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          ref: main
      - name: Download patch
        uses: actions/download-artifact@v5
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v7
        with:
          token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          commit-message: |-
            chore(deps): upgrade dependencies

            Upgrades project dependencies. See details in [workflow run].

            [Workflow Run]: \${{ github.server_url }}/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

            ------

            *Automatically created by projen via the "upgrade-main" workflow*
          branch: github-actions/upgrade-main
          title: "chore(deps): upgrade dependencies"
          body: |-
            Upgrades project dependencies. See details in [workflow run].

            [Workflow Run]: \${{ github.server_url }}/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

            ------

            *Automatically created by projen via the "upgrade-main" workflow*
          author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
          committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
          signoff: true
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/package.json
!/LICENSE
!/.npmignore
logs
*.log
npm-debug.log*
yarn-debug.log*
yarn-error.log*
lerna-debug.log*
report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
pids
*.pid
*.seed
*.pid.lock
lib-cov
coverage
*.lcov
.nyc_output
build/Release
node_modules/
jspm_packages/
*.tsbuildinfo
.eslintcache
*.tgz
.yarn-integrity
.cache
/test-reports/
junit.xml
/coverage/
!/.github/workflows/build.yml
/dist/changelog.md
/dist/version.txt
!/.github/workflows/release.yml
!/.mergify.yml
!/.github/workflows/upgrade-main.yml
!/.github/pull_request_template.md
!/test/
!/tsconfig.dev.json
!/src/
/lib
/dist/
!/.eslintrc.json
.jsii
tsconfig.json
!/API.md
!/.projenrc.js
",
  ".mergify.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

queue_rules:
  - name: default
    update_method: merge
    queue_conditions:
      - "#approved-reviews-by>=1"
      - -label~=(do-not-merge)
      - status-success=build
      - status-success=package-js
    merge_method: squash
    commit_message_template: |-
      {{ title }} (#{{ number }})

      {{ body }}
pull_request_rules:
  - name: Automatic merge on approval and successful build
    actions:
      delete_head_branch: {}
      queue:
        name: default
    conditions:
      - "#approved-reviews-by>=1"
      - -label~=(do-not-merge)
      - status-success=build
      - status-success=package-js
merge_queue:
  max_parallel_checks: 1
",
  ".npmignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
/.projen/
/test-reports/
junit.xml
/coverage/
permissions-backup.acl
/dist/changelog.md
/dist/version.txt
/.mergify.yml
/test/
/tsconfig.dev.json
/src/
!/lib/
!/lib/**/*.js
!/lib/**/*.d.ts
dist
/tsconfig.json
/.github/
/.vscode/
/.idea/
/.projenrc.js
tsconfig.tsbuildinfo
/.eslintrc.json
!.jsii
/.gitattributes
",
  ".projen/deps.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "dependencies": [
      {
        "name": "@stylistic/eslint-plugin",
        "type": "build",
        "version": "^2",
      },
      {
        "name": "@types/jest",
        "type": "build",
      },
      {
        "name": "@types/node",
        "type": "build",
      },
      {
        "name": "@typescript-eslint/eslint-plugin",
        "type": "build",
        "version": "^8",
      },
      {
        "name": "@typescript-eslint/parser",
        "type": "build",
        "version": "^8",
      },
      {
        "name": "commit-and-tag-version",
        "type": "build",
        "version": "^12",
      },
      {
        "name": "constructs",
        "type": "build",
        "version": "^10.0.0",
      },
      {
        "name": "eslint-import-resolver-typescript",
        "type": "build",
      },
      {
        "name": "eslint-plugin-import",
        "type": "build",
      },
      {
        "name": "eslint",
        "type": "build",
        "version": "^9",
      },
      {
        "name": "jest",
        "type": "build",
      },
      {
        "name": "jest-junit",
        "type": "build",
        "version": "^16",
      },
      {
        "name": "jsii-diff",
        "type": "build",
      },
      {
        "name": "jsii-docgen",
        "type": "build",
        "version": "^10.5.0",
      },
      {
        "name": "jsii-pacmak",
        "type": "build",
      },
      {
        "name": "jsii-rosetta",
        "type": "build",
        "version": "~5.9.0",
      },
      {
        "name": "jsii",
        "type": "build",
        "version": "~5.9.0",
      },
      {
        "name": "projen",
        "type": "build",
      },
      {
        "name": "ts-jest",
        "type": "build",
      },
      {
        "name": "typescript",
        "type": "build",
      },
    ],
  },
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".eslintrc.json",
      ".gitattributes",
      ".github/pull_request_template.md",
      ".github/workflows/build.yml",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/release.yml",
      ".github/workflows/upgrade-main.yml",
      ".gitignore",
      ".mergify.yml",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "LICENSE",
      "tsconfig.dev.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "env": {
      "PATH": "$(npx -c "node --print process.env.PATH")",
    },
    "tasks": {
      "build": {
        "description": "Full release build",
        "name": "build",
        "steps": [
          {
            "spawn": "default",
          },
          {
            "spawn": "pre-compile",
          },
          {
            "spawn": "compile",
          },
          {
            "spawn": "post-compile",
          },
          {
            "spawn": "test",
          },
          {
            "spawn": "package",
          },
        ],
      },
      "bump": {
        "condition": "git log --oneline -1 | grep -qv "chore(release):"",
        "description": "Bumps version based on latest git tag and generates a changelog entry",
        "env": {
          "BUMPFILE": "dist/version.txt",
          "BUMP_PACKAGE": "commit-and-tag-version@^12",
          "CHANGELOG": "dist/changelog.md",
          "OUTFILE": "package.json",
          "RELEASETAG": "dist/releasetag.txt",
          "RELEASE_TAG_PREFIX": "",
        },
        "name": "bump",
        "steps": [
          {
            "builtin": "release/bump-version",
          },
        ],
      },
      "clobber": {
        "condition": "git diff --exit-code > /dev/null",
        "description": "hard resets to HEAD of origin and cleans the local repo",
        "env": {
          "BRANCH": "$(git branch --show-current)",
        },
        "name": "clobber",
        "steps": [
          {
            "exec": "git checkout -b scratch",
            "name": "save current HEAD in "scratch" branch",
          },
          {
            "exec": "git checkout $BRANCH",
          },
          {
            "exec": "git fetch origin",
            "name": "fetch latest changes from origin",
          },
          {
            "exec": "git reset --hard origin/$BRANCH",
            "name": "hard reset to origin commit",
          },
          {
            "exec": "git clean -fdx",
            "name": "clean all untracked files",
          },
          {
            "say": "ready to rock! (unpushed commits are under the "scratch" branch)",
          },
        ],
      },
      "compat": {
        "description": "Perform API compatibility check against latest version",
        "name": "compat",
        "steps": [
          {
            "exec": "jsii-diff npm:$(node -p "require('./package.json').name") -k --ignore-file .compatignore || (echo "
UNEXPECTED BREAKING CHANGES: add keys such as 'removed:constructs.Node.of' to .compatignore to skip.
" && exit 1)",
          },
        ],
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
        "steps": [
          {
            "exec": "jsii --silence-warnings=reserved-word",
          },
        ],
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node .projenrc.js",
          },
        ],
      },
      "docgen": {
        "description": "Generate API.md from .jsii manifest",
        "name": "docgen",
        "steps": [
          {
            "exec": "jsii-docgen -o API.md",
          },
        ],
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "eslint": {
        "description": "Runs eslint against the codebase",
        "env": {
          "ESLINT_USE_FLAT_CONFIG": "false",
          "NODE_NO_WARNINGS": "1",
        },
        "name": "eslint",
        "steps": [
          {
            "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern $@ src test build-tools .projenrc.js",
            "receiveArgs": true,
          },
        ],
      },
      "install": {
        "description": "Install project dependencies and update lockfile (non-frozen)",
        "name": "install",
        "steps": [
          {
            "exec": "yarn install --check-files",
          },
        ],
      },
      "install:ci": {
        "description": "Install project dependencies using frozen lockfile",
        "name": "install:ci",
        "steps": [
          {
            "exec": "yarn install --check-files --frozen-lockfile",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
        "steps": [
          {
            "condition": "node -e "if (!process.env.CI) process.exit(1)"",
            "spawn": "package:js",
          },
          {
            "condition": "node -e "if (process.env.CI) process.exit(1)"",
            "spawn": "package-all",
          },
        ],
      },
      "package-all": {
        "description": "Packages artifacts for all target languages",
        "name": "package-all",
        "steps": [
          {
            "spawn": "package:js",
          },
        ],
      },
      "package:js": {
        "description": "Create js language bindings",
        "name": "package:js",
        "steps": [
          {
            "exec": "jsii-pacmak -v --target js",
          },
        ],
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
        "steps": [
          {
            "spawn": "docgen",
          },
        ],
      },
      "post-upgrade": {
        "description": "Runs after upgrading dependencies",
        "name": "post-upgrade",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "release": {
        "description": "Prepare a release from "main" branch",
        "env": {
          "RELEASE": "true",
        },
        "name": "release",
        "steps": [
          {
            "exec": "rm -fr dist",
          },
          {
            "spawn": "bump",
          },
          {
            "spawn": "build",
          },
          {
            "spawn": "unbump",
          },
          {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
        "steps": [
          {
            "exec": "jest --passWithNoTests --updateSnapshot",
            "receiveArgs": true,
          },
          {
            "spawn": "eslint",
          },
        ],
      },
      "test:watch": {
        "description": "Run jest in watch mode",
        "name": "test:watch",
        "steps": [
          {
            "exec": "jest --watch",
          },
        ],
      },
      "unbump": {
        "description": "Restores version to 0.0.0",
        "env": {
          "BUMPFILE": "dist/version.txt",
          "BUMP_PACKAGE": "commit-and-tag-version@^12",
          "CHANGELOG": "dist/changelog.md",
          "OUTFILE": "package.json",
          "RELEASETAG": "dist/releasetag.txt",
          "RELEASE_TAG_PREFIX": "",
        },
        "name": "unbump",
        "steps": [
          {
            "builtin": "release/reset-version",
          },
        ],
      },
      "upgrade": {
        "description": "upgrade dependencies",
        "env": {
          "CI": "0",
        },
        "name": "upgrade",
        "steps": [
          {
            "exec": "npx npm-check-updates@18 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@types/jest,@types/node,eslint-import-resolver-typescript,eslint-plugin-import,jest,jsii-diff,jsii-pacmak,projen,ts-jest,typescript",
          },
          {
            "exec": "yarn install --check-files",
          },
          {
            "exec": "yarn upgrade @stylistic/eslint-plugin @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser commit-and-tag-version constructs eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit jsii-diff jsii-docgen jsii-pacmak jsii-rosetta jsii projen ts-jest typescript",
          },
          {
            "exec": "npx projen",
          },
          {
            "spawn": "post-upgrade",
          },
        ],
      },
      "watch": {
        "description": "Watch & compile in the background",
        "name": "watch",
        "steps": [
          {
            "exec": "jsii -w --silence-warnings=reserved-word",
          },
        ],
      },
    },
  },
  "LICENSE": "
                                 Apache License
                           Version 2.0, January 2004
                        http://www.apache.org/licenses/

   TERMS AND CONDITIONS FOR USE, REPRODUCTION, AND DISTRIBUTION

   1. Definitions.

      "License" shall mean the terms and conditions for use, reproduction,
      and distribution as defined by Sections 1 through 9 of this document.

      "Licensor" shall mean the copyright owner or entity authorized by
      the copyright owner that is granting the License.

      "Legal Entity" shall mean the union of the acting entity and all
      other entities that control, are controlled by, or are under common
      control with that entity. For the purposes of this definition,
      "control" means (i) the power, direct or indirect, to cause the
      direction or management of such entity, whether by contract or
      otherwise, or (ii) ownership of fifty percent (50%) or more of the
      outstanding shares, or (iii) beneficial ownership of such entity.

      "You" (or "Your") shall mean an individual or Legal Entity
      exercising permissions granted by this License.

      "Source" form shall mean the preferred form for making modifications,
      including but not limited to software source code, documentation
      source, and configuration files.

      "Object" form shall mean any form resulting from mechanical
      transformation or translation of a Source form, including but
      not limited to compiled object code, generated documentation,
      and conversions to other media types.

      "Work" shall mean the work of authorship, whether in Source or
      Object form, made available under the License, as indicated by a
      copyright notice that is included in or attached to the work
      (an example is provided in the Appendix below).

      "Derivative Works" shall mean any work, whether in Source or Object
      form, that is based on (or derived from) the Work and for which the
      editorial revisions, annotations, elaborations, or other modifications
      represent, as a whole, an original work of authorship. For the purposes
      of this License, Derivative Works shall not include works that remain
      separable from, or merely link (or bind by name) to the interfaces of,
      the Work and Derivative Works thereof.

      "Contribution" shall mean any work of authorship, including
      the original version of the Work and any modifications or additions
      to that Work or Derivative Works thereof, that is intentionally
      submitted to Licensor for inclusion in the Work by the copyright owner
      or by an individual or Legal Entity authorized to submit on behalf of
      the copyright owner. For the purposes of this definition, "submitted"
      means any form of electronic, verbal, or written communication sent
      to the Licensor or its representatives, including but not limited to
      communication on electronic mailing lists, source code control systems,
      and issue tracking systems that are managed by, or on behalf of, the
      Licensor for the purpose of discussing and improving the Work, but
      excluding communication that is conspicuously marked or otherwise
      designated in writing by the copyright owner as "Not a Contribution."

      "Contributor" shall mean Licensor and any individual or Legal Entity
      on behalf of whom a Contribution has been received by Licensor and
      subsequently incorporated within the Work.

   2. Grant of Copyright License. Subject to the terms and conditions of
      this License, each Contributor hereby grants to You a perpetual,
      worldwide, non-exclusive, no-charge, royalty-free, irrevocable
      copyright license to reproduce, prepare Derivative Works of,
      publicly display, publicly perform, sublicense, and distribute the
      Work and such Derivative Works in Source or Object form.

   3. Grant of Patent License. Subject to the terms and conditions of
      this License, each Contributor hereby grants to You a perpetual,
      worldwide, non-exclusive, no-charge, royalty-free, irrevocable
      (except as stated in this section) patent license to make, have made,
      use, offer to sell, sell, import, and otherwise transfer the Work,
      where such license applies only to those patent claims licensable
      by such Contributor that are necessarily infringed by their
      Contribution(s) alone or by combination of their Contribution(s)
      with the Work to which such Contribution(s) was submitted. If You
      institute patent litigation against any entity (including a
      cross-claim or counterclaim in a lawsuit) alleging that the Work
      or a Contribution incorporated within the Work constitutes direct
      or contributory patent infringement, then any patent licenses
      granted to You under this License for that Work shall terminate
      as of the date such litigation is filed.

   4. Redistribution. You may reproduce and distribute copies of the
      Work or Derivative Works thereof in any medium, with or without
      modifications, and in Source or Object form, provided that You
      meet the following conditions:

      (a) You must give any other recipients of the Work or
          Derivative Works a copy of this License; and

      (b) You must cause any modified files to carry prominent notices
          stating that You changed the files; and

      (c) You must retain, in the Source form of any Derivative Works
          that You distribute, all copyright, patent, trademark, and
          attribution notices from the Source form of the Work,
          excluding those notices that do not pertain to any part of
          the Derivative Works; and

      (d) If the Work includes a "NOTICE" text file as part of its
          distribution, then any Derivative Works that You distribute must
          include a readable copy of the attribution notices contained
          within such NOTICE file, excluding those notices that do not
          pertain to any part of the Derivative Works, in at least one
          of the following places: within a NOTICE text file distributed
          as part of the Derivative Works; within the Source form or
          documentation, if provided along with the Derivative Works; or,
          within a display generated by the Derivative Works, if and
          wherever such third-party notices normally appear. The contents
          of the NOTICE file are for informational purposes only and
          do not modify the License. You may add Your own attribution
          notices within Derivative Works that You distribute, alongside
          or as an addendum to the NOTICE text from the Work, provided
          that such additional attribution notices cannot be construed
          as modifying the License.

      You may add Your own copyright statement to Your modifications and
      may provide additional or different license terms and conditions
      for use, reproduction, or distribution of Your modifications, or
      for any such Derivative Works as a whole, provided Your use,
      reproduction, and distribution of the Work otherwise complies with
      the conditions stated in this License.

   5. Submission of Contributions. Unless You explicitly state otherwise,
      any Contribution intentionally submitted for inclusion in the Work
      by You to the Licensor shall be under the terms and conditions of
      this License, without any additional terms or conditions.
      Notwithstanding the above, nothing herein shall supersede or modify
      the terms of any separate license agreement you may have executed
      with Licensor regarding such Contributions.

   6. Trademarks. This License does not grant permission to use the trade
      names, trademarks, service marks, or product names of the Licensor,
      except as required for reasonable and customary use in describing the
      origin of the Work and reproducing the content of the NOTICE file.

   7. Disclaimer of Warranty. Unless required by applicable law or
      agreed to in writing, Licensor provides the Work (and each
      Contributor provides its Contributions) on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
      implied, including, without limitation, any warranties or conditions
      of TITLE, NON-INFRINGEMENT, MERCHANTABILITY, or FITNESS FOR A
      PARTICULAR PURPOSE. You are solely responsible for determining the
      appropriateness of using or redistributing the Work and assume any
      risks associated with Your exercise of permissions under this License.

   8. Limitation of Liability. In no event and under no legal theory,
      whether in tort (including negligence), contract, or otherwise,
      unless required by applicable law (such as deliberate and grossly
      negligent acts) or agreed to in writing, shall any Contributor be
      liable to You for damages, including any direct, indirect, special,
      incidental, or consequential damages of any character arising as a
      result of this License or out of the use or inability to use the
      Work (including but not limited to damages for loss of goodwill,
      work stoppage, computer failure or malfunction, or any and all
      other commercial damages or losses), even if such Contributor
      has been advised of the possibility of such damages.

   9. Accepting Warranty or Additional Liability. While redistributing
      the Work or Derivative Works thereof, You may choose to offer,
      and charge a fee for, acceptance of support, warranty, indemnity,
      or other liability obligations and/or rights consistent with this
      License. However, in accepting such obligations, You may act only
      on Your own behalf and on Your sole responsibility, not on behalf
      of any other Contributor, and only if You agree to indemnify,
      defend, and hold each Contributor harmless for any liability
      incurred by, or claims asserted against, such Contributor by reason
      of your accepting any such warranty or additional liability.

   END OF TERMS AND CONDITIONS

   APPENDIX: How to apply the Apache License to your work.

      To apply the Apache License to your work, attach the following
      boilerplate notice, with the fields enclosed by brackets "[]"
      replaced with your own identifying information. (Don't include
      the brackets!)  The text should be enclosed in the appropriate
      comment syntax for the file format. We also recommend that a
      file or class name and description of purpose be included on the
      same "printed page" as the copyright notice for easier
      identification within third-party archives.

   Copyright [yyyy] [name of copyright owner]

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
",
  "README.md": "# replace this",
  "package.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "author": {
      "email": "hello@hello.com",
      "name": "My Name",
      "organization": false,
    },
    "devDependencies": {
      "@stylistic/eslint-plugin": "^2",
      "@types/jest": "*",
      "@types/node": "*",
      "@typescript-eslint/eslint-plugin": "^8",
      "@typescript-eslint/parser": "^8",
      "commit-and-tag-version": "^12",
      "constructs": "^10.0.0",
      "eslint": "^9",
      "eslint-import-resolver-typescript": "*",
      "eslint-plugin-import": "*",
      "jest": "*",
      "jest-junit": "^16",
      "jsii": "~5.9.0",
      "jsii-diff": "*",
      "jsii-docgen": "^10.5.0",
      "jsii-pacmak": "*",
      "jsii-rosetta": "~5.9.0",
      "projen": "*",
      "ts-jest": "*",
      "typescript": "*",
    },
    "jest": {
      "clearMocks": true,
      "collectCoverage": true,
      "coverageDirectory": "coverage",
      "coveragePathIgnorePatterns": [
        "/node_modules/",
      ],
      "coverageProvider": "v8",
      "coverageReporters": [
        "json",
        "lcov",
        "clover",
        "cobertura",
        "text",
      ],
      "reporters": [
        "default",
        [
          "jest-junit",
          {
            "outputDirectory": "test-reports",
          },
        ],
      ],
      "testMatch": [
        "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
        "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
      ],
      "testPathIgnorePatterns": [
        "/node_modules/",
      ],
      "transform": {
        "^.+\\.[t]sx?$": [
          "ts-jest",
          {
            "tsconfig": "tsconfig.dev.json",
          },
        ],
      },
      "watchPathIgnorePatterns": [
        "/node_modules/",
      ],
    },
    "jsii": {
      "outdir": "dist",
      "targets": {},
      "tsc": {
        "outDir": "lib",
        "rootDir": "src",
      },
    },
    "license": "Apache-2.0",
    "main": "lib/index.js",
    "name": "project",
    "publishConfig": {
      "access": "public",
    },
    "repository": {
      "type": "git",
      "url": "https://github.com/foo/bar.git",
    },
    "scripts": {
      "build": "npx projen build",
      "bump": "npx projen bump",
      "clobber": "npx projen clobber",
      "compat": "npx projen compat",
      "compile": "npx projen compile",
      "default": "npx projen default",
      "docgen": "npx projen docgen",
      "eject": "npx projen eject",
      "eslint": "npx projen eslint",
      "package": "npx projen package",
      "package-all": "npx projen package-all",
      "package:js": "npx projen package:js",
      "post-compile": "npx projen post-compile",
      "post-upgrade": "npx projen post-upgrade",
      "pre-compile": "npx projen pre-compile",
      "projen": "npx projen",
      "release": "npx projen release",
      "test": "npx projen test",
      "test:watch": "npx projen test:watch",
      "unbump": "npx projen unbump",
      "upgrade": "npx projen upgrade",
      "watch": "npx projen watch",
    },
    "stability": "stable",
    "types": "lib/index.d.ts",
    "version": "0.0.0",
  },
  "src/index.ts": "export class Hello {
  public sayHello() {
    return 'hello, world!';
  }
}",
  "test/hello.test.ts": "import { Hello } from '../src';

test('hello', () => {
  expect(new Hello().sayHello()).toBe('hello, world!');
});",
  "tsconfig.dev.json": {
    "compilerOptions": {
      "alwaysStrict": true,
      "declaration": true,
      "esModuleInterop": true,
      "experimentalDecorators": true,
      "inlineSourceMap": true,
      "inlineSources": true,
      "lib": [
        "es2020",
      ],
      "module": "CommonJS",
      "noEmitOnError": false,
      "noFallthroughCasesInSwitch": true,
      "noImplicitAny": true,
      "noImplicitReturns": true,
      "noImplicitThis": true,
      "noUnusedLocals": true,
      "noUnusedParameters": true,
      "resolveJsonModule": true,
      "strict": true,
      "strictNullChecks": true,
      "strictPropertyInitialization": true,
      "stripInternal": true,
      "target": "ES2020",
    },
    "exclude": [
      "node_modules",
    ],
    "include": [
      "src/**/*.ts",
      "test/**/*.ts",
      ".projenrc.js",
    ],
  },
}
`;

exports[`language bindings package creates all bindings 1`] = `
{
  "description": "Creates the distribution package",
  "name": "package",
  "steps": [
    {
      "condition": "node -e "if (!process.env.CI) process.exit(1)"",
      "spawn": "package:js",
    },
    {
      "condition": "node -e "if (process.env.CI) process.exit(1)"",
      "spawn": "package-all",
    },
  ],
}
`;

exports[`language bindings package:dotnet task 1`] = `
{
  "description": "Create dotnet language bindings",
  "name": "package:dotnet",
  "steps": [
    {
      "exec": "jsii-pacmak -v --target dotnet",
    },
  ],
}
`;

exports[`language bindings package:go task 1`] = `
{
  "description": "Create go language bindings",
  "name": "package:go",
  "steps": [
    {
      "exec": "jsii-pacmak -v --target go",
    },
  ],
}
`;

exports[`language bindings package:java task 1`] = `
{
  "description": "Create java language bindings",
  "name": "package:java",
  "steps": [
    {
      "exec": "jsii-pacmak -v --target java",
    },
  ],
}
`;

exports[`language bindings package:js task 1`] = `
{
  "description": "Create js language bindings",
  "name": "package:js",
  "steps": [
    {
      "exec": "jsii-pacmak -v --target js",
    },
  ],
}
`;

exports[`language bindings package:python task 1`] = `
{
  "description": "Create python language bindings",
  "name": "package:python",
  "steps": [
    {
      "exec": "jsii-pacmak -v --target python",
    },
  ],
}
`;

exports[`language bindings release workflow includes release_golang job 1`] = `
{
  "if": "needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha",
  "name": "Publish to GitHub Go Module Repository",
  "needs": "release",
  "permissions": {
    "contents": "read",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "uses": "actions/setup-node@v5",
      "with": {
        "node-version": "lts/*",
      },
    },
    {
      "uses": "actions/setup-go@v6",
      "with": {
        "go-version": "^1.18.0",
      },
    },
    {
      "name": "Download build artifacts",
      "uses": "actions/download-artifact@v5",
      "with": {
        "name": "build-artifact",
        "path": "dist",
      },
    },
    {
      "continue-on-error": true,
      "name": "Restore build artifact permissions",
      "run": "cd dist && setfacl --restore=permissions-backup.acl",
    },
    {
      "name": "Checkout",
      "uses": "actions/checkout@v5",
      "with": {
        "path": ".repo",
      },
    },
    {
      "name": "Install Dependencies",
      "run": "cd .repo && yarn install --check-files --frozen-lockfile",
    },
    {
      "name": "Extract build artifact",
      "run": "tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo",
    },
    {
      "name": "Move build artifact out of the way",
      "run": "mv dist dist.old",
    },
    {
      "name": "Create go artifact",
      "run": "cd .repo && npx projen package:go",
    },
    {
      "name": "Collect go artifact",
      "run": "mv .repo/dist dist",
    },
    {
      "env": {
        "GITHUB_TOKEN": "\${{ secrets.GO_GITHUB_TOKEN }}",
        "GIT_USER_EMAIL": "41898282+github-actions[bot]@users.noreply.github.com",
        "GIT_USER_NAME": "github-actions[bot]",
      },
      "name": "Release",
      "run": "npx -p publib@latest publib-golang",
    },
  ],
}
`;

exports[`language bindings release workflow includes release_maven job 1`] = `
{
  "if": "needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha",
  "name": "Publish to Maven Central",
  "needs": "release",
  "permissions": {
    "contents": "read",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "uses": "actions/setup-java@v5",
      "with": {
        "distribution": "corretto",
        "java-version": "11",
      },
    },
    {
      "uses": "actions/setup-node@v5",
      "with": {
        "node-version": "lts/*",
      },
    },
    {
      "name": "Download build artifacts",
      "uses": "actions/download-artifact@v5",
      "with": {
        "name": "build-artifact",
        "path": "dist",
      },
    },
    {
      "continue-on-error": true,
      "name": "Restore build artifact permissions",
      "run": "cd dist && setfacl --restore=permissions-backup.acl",
    },
    {
      "name": "Checkout",
      "uses": "actions/checkout@v5",
      "with": {
        "path": ".repo",
      },
    },
    {
      "name": "Install Dependencies",
      "run": "cd .repo && yarn install --check-files --frozen-lockfile",
    },
    {
      "name": "Extract build artifact",
      "run": "tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo",
    },
    {
      "name": "Move build artifact out of the way",
      "run": "mv dist dist.old",
    },
    {
      "name": "Create java artifact",
      "run": "cd .repo && npx projen package:java",
    },
    {
      "name": "Collect java artifact",
      "run": "mv .repo/dist dist",
    },
    {
      "env": {
        "MAVEN_GPG_PRIVATE_KEY": "\${{ secrets.MAVEN_GPG_PRIVATE_KEY }}",
        "MAVEN_GPG_PRIVATE_KEY_PASSPHRASE": "\${{ secrets.MAVEN_GPG_PRIVATE_KEY_PASSPHRASE }}",
        "MAVEN_PASSWORD": "\${{ secrets.MAVEN_PASSWORD }}",
        "MAVEN_SERVER_ID": "central-ossrh",
        "MAVEN_STAGING_PROFILE_ID": "\${{ secrets.MAVEN_STAGING_PROFILE_ID }}",
        "MAVEN_USERNAME": "\${{ secrets.MAVEN_USERNAME }}",
      },
      "name": "Release",
      "run": "npx -p publib@latest publib-maven",
    },
  ],
}
`;

exports[`language bindings release workflow includes release_npm job 1`] = `
{
  "if": "needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha",
  "name": "Publish to npm",
  "needs": "release",
  "permissions": {
    "contents": "read",
    "id-token": "write",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "uses": "actions/setup-node@v5",
      "with": {
        "node-version": "lts/*",
      },
    },
    {
      "name": "Download build artifacts",
      "uses": "actions/download-artifact@v5",
      "with": {
        "name": "build-artifact",
        "path": "dist",
      },
    },
    {
      "continue-on-error": true,
      "name": "Restore build artifact permissions",
      "run": "cd dist && setfacl --restore=permissions-backup.acl",
    },
    {
      "name": "Checkout",
      "uses": "actions/checkout@v5",
      "with": {
        "path": ".repo",
      },
    },
    {
      "name": "Install Dependencies",
      "run": "cd .repo && yarn install --check-files --frozen-lockfile",
    },
    {
      "name": "Extract build artifact",
      "run": "tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo",
    },
    {
      "name": "Move build artifact out of the way",
      "run": "mv dist dist.old",
    },
    {
      "name": "Create js artifact",
      "run": "cd .repo && npx projen package:js",
    },
    {
      "name": "Collect js artifact",
      "run": "mv .repo/dist dist",
    },
    {
      "env": {
        "NPM_CONFIG_PROVENANCE": "true",
        "NPM_DIST_TAG": "latest",
        "NPM_REGISTRY": "registry.npmjs.org",
        "NPM_TOKEN": "\${{ secrets.NPM_TOKEN }}",
      },
      "name": "Release",
      "run": "npx -p publib@latest publib-npm",
    },
  ],
}
`;

exports[`language bindings release workflow includes release_nuget job 1`] = `
{
  "if": "needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha",
  "name": "Publish to NuGet Gallery",
  "needs": "release",
  "permissions": {
    "contents": "read",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "uses": "actions/setup-node@v5",
      "with": {
        "node-version": "lts/*",
      },
    },
    {
      "uses": "actions/setup-dotnet@v5",
      "with": {
        "dotnet-version": "6.x",
      },
    },
    {
      "name": "Download build artifacts",
      "uses": "actions/download-artifact@v5",
      "with": {
        "name": "build-artifact",
        "path": "dist",
      },
    },
    {
      "continue-on-error": true,
      "name": "Restore build artifact permissions",
      "run": "cd dist && setfacl --restore=permissions-backup.acl",
    },
    {
      "name": "Checkout",
      "uses": "actions/checkout@v5",
      "with": {
        "path": ".repo",
      },
    },
    {
      "name": "Install Dependencies",
      "run": "cd .repo && yarn install --check-files --frozen-lockfile",
    },
    {
      "name": "Extract build artifact",
      "run": "tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo",
    },
    {
      "name": "Move build artifact out of the way",
      "run": "mv dist dist.old",
    },
    {
      "name": "Create dotnet artifact",
      "run": "cd .repo && npx projen package:dotnet",
    },
    {
      "name": "Collect dotnet artifact",
      "run": "mv .repo/dist dist",
    },
    {
      "env": {
        "NUGET_API_KEY": "\${{ secrets.NUGET_API_KEY }}",
      },
      "name": "Release",
      "run": "npx -p publib@latest publib-nuget",
    },
  ],
}
`;

exports[`language bindings release workflow includes release_pypi job 1`] = `
{
  "if": "needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha",
  "name": "Publish to PyPI",
  "needs": "release",
  "permissions": {
    "contents": "read",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "uses": "actions/setup-node@v5",
      "with": {
        "node-version": "lts/*",
      },
    },
    {
      "uses": "actions/setup-python@v6",
      "with": {
        "python-version": "3.x",
      },
    },
    {
      "name": "Download build artifacts",
      "uses": "actions/download-artifact@v5",
      "with": {
        "name": "build-artifact",
        "path": "dist",
      },
    },
    {
      "continue-on-error": true,
      "name": "Restore build artifact permissions",
      "run": "cd dist && setfacl --restore=permissions-backup.acl",
    },
    {
      "name": "Checkout",
      "uses": "actions/checkout@v5",
      "with": {
        "path": ".repo",
      },
    },
    {
      "name": "Install Dependencies",
      "run": "cd .repo && yarn install --check-files --frozen-lockfile",
    },
    {
      "name": "Extract build artifact",
      "run": "tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo",
    },
    {
      "name": "Move build artifact out of the way",
      "run": "mv dist dist.old",
    },
    {
      "name": "Create python artifact",
      "run": "cd .repo && npx projen package:python",
    },
    {
      "name": "Collect python artifact",
      "run": "mv .repo/dist dist",
    },
    {
      "env": {
        "TWINE_PASSWORD": "\${{ secrets.TWINE_PASSWORD }}",
        "TWINE_USERNAME": "\${{ secrets.TWINE_USERNAME }}",
      },
      "name": "Release",
      "run": "npx -p publib@latest publib-pypi",
    },
  ],
}
`;

exports[`language bindings snapshot dotnet 1`] = `
{
  "if": "\${{ !needs.build.outputs.self_mutation_happened }}",
  "needs": "build",
  "permissions": {
    "contents": "read",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "uses": "actions/setup-node@v5",
      "with": {
        "node-version": "lts/*",
      },
    },
    {
      "uses": "actions/setup-dotnet@v5",
      "with": {
        "dotnet-version": "6.x",
      },
    },
    {
      "name": "Download build artifacts",
      "uses": "actions/download-artifact@v5",
      "with": {
        "name": "build-artifact",
        "path": "dist",
      },
    },
    {
      "continue-on-error": true,
      "name": "Restore build artifact permissions",
      "run": "cd dist && setfacl --restore=permissions-backup.acl",
    },
    {
      "name": "Checkout",
      "uses": "actions/checkout@v5",
      "with": {
        "path": ".repo",
        "ref": "\${{ github.event.pull_request.head.ref }}",
        "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
      },
    },
    {
      "name": "Install Dependencies",
      "run": "cd .repo && yarn install --check-files --frozen-lockfile",
    },
    {
      "name": "Extract build artifact",
      "run": "tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo",
    },
    {
      "name": "Move build artifact out of the way",
      "run": "mv dist dist.old",
    },
    {
      "name": "Create dotnet artifact",
      "run": "cd .repo && npx projen package:dotnet",
    },
    {
      "name": "Collect dotnet artifact",
      "run": "mv .repo/dist dist",
    },
  ],
}
`;

exports[`language bindings snapshot go 1`] = `
{
  "if": "\${{ !needs.build.outputs.self_mutation_happened }}",
  "needs": "build",
  "permissions": {
    "contents": "read",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "uses": "actions/setup-node@v5",
      "with": {
        "node-version": "lts/*",
      },
    },
    {
      "uses": "actions/setup-go@v6",
      "with": {
        "go-version": "^1.18.0",
      },
    },
    {
      "name": "Download build artifacts",
      "uses": "actions/download-artifact@v5",
      "with": {
        "name": "build-artifact",
        "path": "dist",
      },
    },
    {
      "continue-on-error": true,
      "name": "Restore build artifact permissions",
      "run": "cd dist && setfacl --restore=permissions-backup.acl",
    },
    {
      "name": "Checkout",
      "uses": "actions/checkout@v5",
      "with": {
        "path": ".repo",
        "ref": "\${{ github.event.pull_request.head.ref }}",
        "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
      },
    },
    {
      "name": "Install Dependencies",
      "run": "cd .repo && yarn install --check-files --frozen-lockfile",
    },
    {
      "name": "Extract build artifact",
      "run": "tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo",
    },
    {
      "name": "Move build artifact out of the way",
      "run": "mv dist dist.old",
    },
    {
      "name": "Create go artifact",
      "run": "cd .repo && npx projen package:go",
    },
    {
      "name": "Collect go artifact",
      "run": "mv .repo/dist dist",
    },
  ],
}
`;

exports[`language bindings snapshot java 1`] = `
{
  "if": "\${{ !needs.build.outputs.self_mutation_happened }}",
  "needs": "build",
  "permissions": {
    "contents": "read",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "uses": "actions/setup-java@v5",
      "with": {
        "distribution": "corretto",
        "java-version": "11",
      },
    },
    {
      "uses": "actions/setup-node@v5",
      "with": {
        "node-version": "lts/*",
      },
    },
    {
      "name": "Download build artifacts",
      "uses": "actions/download-artifact@v5",
      "with": {
        "name": "build-artifact",
        "path": "dist",
      },
    },
    {
      "continue-on-error": true,
      "name": "Restore build artifact permissions",
      "run": "cd dist && setfacl --restore=permissions-backup.acl",
    },
    {
      "name": "Checkout",
      "uses": "actions/checkout@v5",
      "with": {
        "path": ".repo",
        "ref": "\${{ github.event.pull_request.head.ref }}",
        "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
      },
    },
    {
      "name": "Install Dependencies",
      "run": "cd .repo && yarn install --check-files --frozen-lockfile",
    },
    {
      "name": "Extract build artifact",
      "run": "tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo",
    },
    {
      "name": "Move build artifact out of the way",
      "run": "mv dist dist.old",
    },
    {
      "name": "Create java artifact",
      "run": "cd .repo && npx projen package:java",
    },
    {
      "name": "Collect java artifact",
      "run": "mv .repo/dist dist",
    },
  ],
}
`;

exports[`language bindings snapshot js 1`] = `
{
  "if": "\${{ !needs.build.outputs.self_mutation_happened }}",
  "needs": "build",
  "permissions": {
    "contents": "read",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "uses": "actions/setup-node@v5",
      "with": {
        "node-version": "lts/*",
      },
    },
    {
      "name": "Download build artifacts",
      "uses": "actions/download-artifact@v5",
      "with": {
        "name": "build-artifact",
        "path": "dist",
      },
    },
    {
      "continue-on-error": true,
      "name": "Restore build artifact permissions",
      "run": "cd dist && setfacl --restore=permissions-backup.acl",
    },
    {
      "name": "Checkout",
      "uses": "actions/checkout@v5",
      "with": {
        "path": ".repo",
        "ref": "\${{ github.event.pull_request.head.ref }}",
        "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
      },
    },
    {
      "name": "Install Dependencies",
      "run": "cd .repo && yarn install --check-files --frozen-lockfile",
    },
    {
      "name": "Extract build artifact",
      "run": "tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo",
    },
    {
      "name": "Move build artifact out of the way",
      "run": "mv dist dist.old",
    },
    {
      "name": "Create js artifact",
      "run": "cd .repo && npx projen package:js",
    },
    {
      "name": "Collect js artifact",
      "run": "mv .repo/dist dist",
    },
  ],
}
`;

exports[`language bindings snapshot python 1`] = `
{
  "if": "\${{ !needs.build.outputs.self_mutation_happened }}",
  "needs": "build",
  "permissions": {
    "contents": "read",
  },
  "runs-on": "ubuntu-latest",
  "steps": [
    {
      "uses": "actions/setup-node@v5",
      "with": {
        "node-version": "lts/*",
      },
    },
    {
      "uses": "actions/setup-python@v6",
      "with": {
        "python-version": "3.x",
      },
    },
    {
      "name": "Download build artifacts",
      "uses": "actions/download-artifact@v5",
      "with": {
        "name": "build-artifact",
        "path": "dist",
      },
    },
    {
      "continue-on-error": true,
      "name": "Restore build artifact permissions",
      "run": "cd dist && setfacl --restore=permissions-backup.acl",
    },
    {
      "name": "Checkout",
      "uses": "actions/checkout@v5",
      "with": {
        "path": ".repo",
        "ref": "\${{ github.event.pull_request.head.ref }}",
        "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
      },
    },
    {
      "name": "Install Dependencies",
      "run": "cd .repo && yarn install --check-files --frozen-lockfile",
    },
    {
      "name": "Extract build artifact",
      "run": "tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo",
    },
    {
      "name": "Move build artifact out of the way",
      "run": "mv dist dist.old",
    },
    {
      "name": "Create python artifact",
      "run": "cd .repo && npx projen package:python",
    },
    {
      "name": "Collect python artifact",
      "run": "mv .repo/dist dist",
    },
  ],
}
`;

exports[`publish to go customizations 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - master
  workflow_dispatch: {}
concurrency:
  group: \${{ github.workflow }}
  cancel-in-progress: false
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
        shell: bash
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.6.2
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs:
      - release
      - release_npm
      - release_golang
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_SHA 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  release_npm:
    name: Publish to npm
    needs: release
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Checkout
        uses: actions/checkout@v5
        with:
          path: .repo
      - name: Install Dependencies
        run: cd .repo && yarn install --check-files --frozen-lockfile
      - name: Extract build artifact
        run: tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo
      - name: Move build artifact out of the way
        run: mv dist dist.old
      - name: Create js artifact
        run: cd .repo && npx projen package:js
      - name: Collect js artifact
        run: mv .repo/dist dist
      - name: Release
        env:
          NPM_DIST_TAG: latest
          NPM_REGISTRY: registry.npmjs.org
          NPM_CONFIG_PROVENANCE: "true"
          NPM_TOKEN: \${{ secrets.NPM_TOKEN }}
        run: npx -p publib@latest publib-npm
  release_golang:
    name: Publish to GitHub Go Module Repository
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - uses: actions/setup-go@v6
        with:
          go-version: ^1.18.0
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Checkout
        uses: actions/checkout@v5
        with:
          path: .repo
      - name: Install Dependencies
        run: cd .repo && yarn install --check-files --frozen-lockfile
      - name: Extract build artifact
        run: tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo
      - name: Move build artifact out of the way
        run: mv dist dist.old
      - name: Create go artifact
        run: cd .repo && npx projen package:go
      - name: Collect go artifact
        run: mv .repo/dist dist
      - name: Release
        env:
          GIT_BRANCH: custom-branch
          GIT_USER_NAME: custom user
          GIT_USER_EMAIL: custom@email.com
          GIT_COMMIT_MESSAGE: custom commit message
          GITHUB_TOKEN: \${{ secrets.CUSTOM_SECRET }}
        run: npx -p publib@latest publib-golang
"
`;

exports[`publish to go defaults 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - master
  workflow_dispatch: {}
concurrency:
  group: \${{ github.workflow }}
  cancel-in-progress: false
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
        shell: bash
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.6.2
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs:
      - release
      - release_npm
      - release_golang
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_SHA 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  release_npm:
    name: Publish to npm
    needs: release
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Checkout
        uses: actions/checkout@v5
        with:
          path: .repo
      - name: Install Dependencies
        run: cd .repo && yarn install --check-files --frozen-lockfile
      - name: Extract build artifact
        run: tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo
      - name: Move build artifact out of the way
        run: mv dist dist.old
      - name: Create js artifact
        run: cd .repo && npx projen package:js
      - name: Collect js artifact
        run: mv .repo/dist dist
      - name: Release
        env:
          NPM_DIST_TAG: latest
          NPM_REGISTRY: registry.npmjs.org
          NPM_CONFIG_PROVENANCE: "true"
          NPM_TOKEN: \${{ secrets.NPM_TOKEN }}
        run: npx -p publib@latest publib-npm
  release_golang:
    name: Publish to GitHub Go Module Repository
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - uses: actions/setup-go@v6
        with:
          go-version: ^1.18.0
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Checkout
        uses: actions/checkout@v5
        with:
          path: .repo
      - name: Install Dependencies
        run: cd .repo && yarn install --check-files --frozen-lockfile
      - name: Extract build artifact
        run: tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo
      - name: Move build artifact out of the way
        run: mv dist dist.old
      - name: Create go artifact
        run: cd .repo && npx projen package:go
      - name: Collect go artifact
        run: mv .repo/dist dist
      - name: Release
        env:
          GIT_USER_NAME: github-actions[bot]
          GIT_USER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
          GITHUB_TOKEN: \${{ secrets.GO_GITHUB_TOKEN }}
        run: npx -p publib@latest publib-golang
"
`;

exports[`publish to nuget all options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - master
  workflow_dispatch: {}
concurrency:
  group: \${{ github.workflow }}
  cancel-in-progress: false
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
        shell: bash
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.6.2
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs:
      - release
      - release_npm
      - release_nuget
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_SHA 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  release_npm:
    name: Publish to npm
    needs: release
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Checkout
        uses: actions/checkout@v5
        with:
          path: .repo
      - name: Install Dependencies
        run: cd .repo && yarn install --check-files --frozen-lockfile
      - name: Extract build artifact
        run: tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo
      - name: Move build artifact out of the way
        run: mv dist dist.old
      - name: Create js artifact
        run: cd .repo && npx projen package:js
      - name: Collect js artifact
        run: mv .repo/dist dist
      - name: Release
        env:
          NPM_DIST_TAG: latest
          NPM_REGISTRY: registry.npmjs.org
          NPM_CONFIG_PROVENANCE: "true"
          NPM_TOKEN: \${{ secrets.NPM_TOKEN }}
        run: npx -p publib@latest publib-npm
  release_nuget:
    name: Publish to NuGet Gallery
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - uses: actions/setup-dotnet@v5
        with:
          dotnet-version: 6.x
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Checkout
        uses: actions/checkout@v5
        with:
          path: .repo
      - name: Install Dependencies
        run: cd .repo && yarn install --check-files --frozen-lockfile
      - name: Extract build artifact
        run: tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo
      - name: Move build artifact out of the way
        run: mv dist dist.old
      - name: Create dotnet artifact
        run: cd .repo && npx projen package:dotnet
      - name: Collect dotnet artifact
        run: mv .repo/dist dist
      - name: Release
        env:
          NUGET_API_KEY: \${{ secrets.NUGET_API_KEY }}
        run: npx -p publib@latest publib-nuget
"
`;

exports[`publish to nuget minimal options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - master
  workflow_dispatch: {}
concurrency:
  group: \${{ github.workflow }}
  cancel-in-progress: false
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
        shell: bash
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.6.2
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs:
      - release
      - release_npm
      - release_nuget
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_SHA 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  release_npm:
    name: Publish to npm
    needs: release
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Checkout
        uses: actions/checkout@v5
        with:
          path: .repo
      - name: Install Dependencies
        run: cd .repo && yarn install --check-files --frozen-lockfile
      - name: Extract build artifact
        run: tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo
      - name: Move build artifact out of the way
        run: mv dist dist.old
      - name: Create js artifact
        run: cd .repo && npx projen package:js
      - name: Collect js artifact
        run: mv .repo/dist dist
      - name: Release
        env:
          NPM_DIST_TAG: latest
          NPM_REGISTRY: registry.npmjs.org
          NPM_CONFIG_PROVENANCE: "true"
          NPM_TOKEN: \${{ secrets.NPM_TOKEN }}
        run: npx -p publib@latest publib-npm
  release_nuget:
    name: Publish to NuGet Gallery
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: lts/*
      - uses: actions/setup-dotnet@v5
        with:
          dotnet-version: 6.x
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Checkout
        uses: actions/checkout@v5
        with:
          path: .repo
      - name: Install Dependencies
        run: cd .repo && yarn install --check-files --frozen-lockfile
      - name: Extract build artifact
        run: tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo
      - name: Move build artifact out of the way
        run: mv dist dist.old
      - name: Create dotnet artifact
        run: cd .repo && npx projen package:dotnet
      - name: Collect dotnet artifact
        run: mv .repo/dist dist
      - name: Release
        env:
          NUGET_API_KEY: \${{ secrets.NUGET_API_KEY }}
        run: npx -p publib@latest publib-nuget
"
`;
